[package]
name = "pixeltree"
version = "0.2.1"
edition = "2024"
authors = ["Matt Orsborn"]
description = "A high-performance procedural 2D tree generator for pixel-art games, built with Bevy. Generate beautiful, wind-animated trees with automatic LOD and spatial culling."
repository = "https://github.com/notarikon-nz/pixeltree_rust"
license = "MIT"

[dependencies]
bevy = "0.16.1"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"

